# router-controller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/router_controller/: client.py  config.py  main.py
src/router_controller/commands/: config_cmd.py  devices.py  dhcp.py  firmware.py  reboot.py  snapshot.py  status.py  wifi.py
src/router_controller/utils/: display.py  errors.py  output.py  serializers.py
