[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "router-controller"
version = "0.4.0"
description = "Cross-platform CLI for TP-Link router management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["tplink", "router", "cli", "network"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "tplinkrouterc6u @ git+https://github.com/AlexandrErohin/TP-Link-Archer-C6U",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
router = "router_controller.main:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatchling.build]
packages = ["src/router_controller"]
